Add starring actors input line to form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <input id='input-title' type="text" name="title" value="" placeholder="Enter your movie name" class="input-text">
                 <br><br>
                 <input id='input-release_year' type="text" name="release_year" value="" placeholder="Enter movie's release year" class="input-text">
+                <br><br>
+                <input id='input-starring_actors' type="text" name="starring_actors" value="" placeholder="Enter movie's actors" class="input-text">
+                <br><br>
                 <textarea id='input-description' name="description" rows="10" cols="80" value="" placeholder="Enter your movie's description"></textarea>
                 <br><br>
                 <input id='input-url' type="text" name="image" value="" placeholder="Enter your movie image url" class="input-text">
