Fix create form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <div class="form-container">
             
-            <form id="create-movie-form" style="">
+            <form id="create-movie-form">
                 <h3>Create a Movie!</h3>
 
                 <input id='input-title' type="text" name="title" value="" placeholder="Enter your movie name" class="input-text">
@@ -21,10 +21,10 @@
                 <br><br>
                 <textarea id='input-description' name="description" rows="8" cols="80" value="" placeholder="Enter your movie's description"></textarea>
                 <br><br>
-                <input id='input-url' type="text" name="image" value="" placeholder="Enter your movie image url" class="input-text">
+                <input id='input-url' type="text" name="image_url" value="" placeholder="Enter your movie image url" class="input-text">
                 <br><br>
 
-                <select id="genres" name="genres">
+                <select id="genres" name="genre_id">
                     <option value="1">Comedy</option>
                     <option value="2">Horror</option>
                     <option value="3">Action</option>
